# rust-read-url

./: .gitignore  Cargo.toml  README.md  TODO
assets/archives/: archive.tar  archive.tar.zst
assets/files/: one.txt  three.txt  two.txt
cli/: Cargo.toml
cli/src/: cli.rs  errors.rs  main.rs  read.rs  run.rs
cli/src/commands/: mod.rs  root.rs
cli/src/commands/read/: asynchronous.rs  blocking.rs  mod.rs  read.rs
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  errors.rs  main.rs  read.rs  run.rs
examples/: t.rs
scripts/: _start-http-server  build  build-assets  build-docs  examples  install-for-user
src/: context.rs  errors.rs  file.rs  http.rs  lib.rs  url.rs
