[workspace]
resolver = "3"
members = ["library", "cli"]

[patch.crates-io]
kutil-cli = { path = "../rust-kutil/cli" }
kutil-cli-macros = { path = "../rust-kutil/cli-macros" }
kutil-io = { path = "../rust-kutil/io" }
kutil-std = { path = "../rust-kutil/std" }
kutil-std-macros = { path = "../rust-kutil/std-macros" }
read-url = { path = "library" }

[profile.release]
strip = "debuginfo"
lto = true
