[workspace]
members = ["crates/library", "crates/cli"]
resolver = "3"

[patch.crates-io]
kutil-cli = { path = "../rust-kutil/crates/cli" }
kutil-cli-macros = { path = "../rust-kutil/crates/cli-macros" }
kutil-io = { path = "../rust-kutil/crates/io" }
kutil-std = { path = "../rust-kutil/crates/std" }
kutil-std-macros = { path = "../rust-kutil/crates/std-macros" }
read-url = { path = "crates/library" }

[profile.release]
strip = "debuginfo"
lto = true
