[package]
edition = "2024"

name = "read-url-cli"
description = "Read from a wide variety of URL types"
version = "0.0.11"
rust-version = "1.91"

license = "MIT OR Apache-2.0"
repository = "https://github.com/tliron/rust-read-url"
documentation = "https://docs.rs/read-url"
authors = ["Tal Liron"]

readme = "../README.md"

categories = []    # https://crates.io/category_slugs
keywords = ["url"]

[dependencies]
anstream = "0.6.21"
clap = { version = "4.5.53", features = ["derive", "string"] }
clap_complete_command = "0.6.1"
kutil = { version = "=0.0.5", features = ["cli", "clap"] }
read-url = { version = "=0.0.10" }
thiserror = "2.0.17"
tracing = "0.1.41"
tokio = { version = "1.48.0", features = ["io-std", "rt-multi-thread"] }

[features]
default = ["async", "blocking"]
async = ["read-url/async"]
blocking = ["read-url/blocking"]

[[bin]]
name = "read-url"
path = "src/main.rs"
