[package]
edition = "2024"

name = "read-url-cli"
description = "Read from a wide variety of URL types"
version = "0.0.4"
rust-version = "1.85"

license = "MIT OR Apache-2.0"
repository = "https://github.com/tliron/rust-read-url"
documentation = "https://docs.rs/read-url"
authors = ["Tal Liron"]

readme = "../../README.md"

categories = []    # https://crates.io/category_slugs
keywords = ["url"]

[dependencies]
anstream = "0.6.18"
clap = { version = "4.5.35", features = ["derive", "string"] }
clap_complete_command = "0.6.1"
kutil-cli = "0.0.4"
read-url = { path = "../library", version = "0.0.4" }
thiserror = "2.0.12"
tracing = "0.1.41"
tokio = { version = "1.44.2", features = ["io-std", "rt-multi-thread"] }

[features]
default = ["async", "blocking"]
async = ["read-url/async"]
blocking = ["read-url/blocking"]

[[bin]]
name = "read-url"
path = "src/main.rs"
